# hvf

./: .gitignore  .hgignore  .hgtags  CMakeLists.txt  COPYING  Makefile  TODO  build.mk  linker.script
Documentation/: 3270  PSA.txt  building.txt  inline-asm.txt  ipl.txt
cp/: .gitignore  .hgignore  CMakeLists.txt  Makefile  cmd_beginstop.c  cmd_display.c  cmd_helpers.c  cmd_ipl.c  cmd_logon.c  cmd_query.c  cmd_store.c  cmd_system.c  cmds.c  directory.c  disassm.c  exception.c  guest.c  guest_ipl.S  init.c  instruction.c  instruction_priv.c  intercept.c  reset.c  splash.c
cp/config/: hvf.directory  local-3215.txt  system.config
cp/doc/: .hgignore  ipl.txt  memory.txt
cp/drivers/: .gitignore  .hgignore  3215.c  Makefile  console.c  dasd.c  device.c  objs.cmake  spooldev.c  spooldev_cons.c  vdevice.c
cp/fs/: .gitignore  .hgignore  Makefile  bcache.c  bdev.c  edf.c  objs.cmake  spool.c
cp/guest/: .gitignore  .hgignore  Makefile  attach.c  exception.c  guest.c  guest_ipl.S  init.c  instruction.c  instruction_priv.c  intercept.c  ipl.c  objs.cmake  reset.c  run.c  system.c
cp/include/: arch.h  bcache.h  bdev.h  buddy.h  channel.h  compiler.h  config.h  console.h  cp.h  cpu.h  dat.h  device.h  directory.h  disassm.h  edf.h  guest.h  interrupt.h  io.h  ldep.h  lexer.h  loader.h  magic.h  mm.h  mutex.h  nucleus.h  page.h  parser.h  sched.h  sclp.h  shell.h  sie.h  slab.h  spinlock.h  splash.h  spool.h  symtab.h  util.h  vcpu.h  vdevice.h
cp/ipl/: ipl_rdr.S  loader.c  loader_asm.S  setmode.S
cp/mm/: .gitignore  .hgignore  buddy.c  dat.c  objs.cmake  page.c  slab.c
cp/nucleus/: .gitignore  .hgignore  Makefile  config.c  config.l  config.y  config_grammar.y  config_lexer.l  direct.c  direct.l  direct.y  direct_lexer.l  ext.c  init.c  int.s  io.c  ldep.c  mch.c  mutex.c  objs.cmake  pgm.c  printf.c  sched.c  sclp.c  spinlock.c  svc.c  symtab.c  util.c
cp/scripts/: Makefile.build  Makefile.commands  extract-version.sh  gen-dir.sh  gen-docs.sh  linker-builtin.script  linker-hvf.script
cp/shell/: .gitignore  .hgignore  Makefile  cmd_beginstop.c  cmd_display.c  cmd_enable.c  cmd_helpers.c  cmd_logon.c  cmd_query.c  cmd_set.c  cmd_store.c  cmd_system.c  cmds.c  directory.c  disassm.c  exception.c  guest.c  guest_ipl.S  init.c  instruction.c  instruction_priv.c  intercept.c  objs.cmake  reset.c  splash.c
debug/: Makefile
doc/: Contributing  announcement.txt  installed_files.txt  register-usage.txt
doc/announcements/: v0.12  v0.13  v0.14
doc/manual/: .gitignore  .hgignore  Makefile  abi.tex  appendices.tex  contents.tex  cp-commands.tex  cp-directory.tex  cp-nss.tex  cp-prog.tex  cp-system-config.tex  cp.tex  front.tex  gen-docs.sh  license.tex  manual.tex  notices.tex  nss-8ball.tex  nss.tex  preface.tex
drivers/: 3215.c  Makefile  console.c  dasd.c  device.c
hercules/: Makefile  hvf.cnf  tape-hvf.tdf
include/: arch.h  asmlinkage.h  atomic.h  binfmt_elf.h  buddy.h  channel.h  circbuf.h  clock.h  compiler.h  config.h  console.h  cp.h  cpu.h  dat.h  device.h  digest.h  directory.h  disassm.h  ebcdic.h  errno.h  interrupt.h  io.h  list.h  magic.h  mm.h  mutex.h  nucleus.h  page.h  sched.h  sie.h  slab.h  spinlock.h  stdarg.h  string.h  types.h  vcpu.h  vdevice.h  vsprintf.h
installer/: .gitignore  .hgignore  CMakeLists.txt  Makefile  check.sh  cpio.c  edf.c  linker.script  loader.h  loader_asm.S  loader_c.c  malloc.c  rdr.S  setmode.s
installer/installer/: .hgignore  Makefile  cpio.c  edf.c  linker.script  loader.h  loader_asm.s  loader_c.c  malloc.c  setmode.s
installer/rdr-ipl-rec/: .hgignore  Makefile  linker.script
ipl/: ipl.S_in  linker.script  loader.c  loader_asm.S  setmode.S
lib/: CMakeLists.txt  Makefile  ascii.c  clock.c  digest.c  ebcdic.c  errno.c  string.c  vsprintf.c
loader/: .gitignore  .hgignore  CMakeLists.txt  Makefile  eckd.S  eckd.s  layout.txt  linker.script  loader.h  loader_asm.S  loader_c.c  setmode.S
loader/eckd-ipl-rec/: .hgignore  Makefile  eckd.s  linker.script
loader/loader/: .hgignore  Makefile  linker.script  loader.h  loader_asm.s  loader_c.c  setmode.s
mm/: Makefile  buddy.c  dat.c  page.c  slab.c
nss/: CMakeLists.txt  Makefile
nss/8ball/: .gitignore  .hgignore  8ball.S  8ball.cnf  8ball.s  CMakeLists.txt  Makefile  generic.ins  linker-8ball.script  linker.script
nss/debuggers/: .gitignore  .hgignore  Makefile  debug.c  generic.ins  linker-debug.script  linker.script  loader.S  mem.txt
nss/ipldev/: .gitignore  .hgignore  CMakeLists.txt  Makefile  entry.s  linker.script
nss/login/: .hgignore  CMakeLists.txt  Makefile  die.s  entry.s  int.h  int.s  io.c  linker.script  main.c  mch.c  misc.h  prg.c  psa.s
nucleus/: Makefile  ebcdic.c  ext.c  init.c  int.S  io.c  mutex.c  pgm.c  printf.c  sched.c  svc.c
scripts/: Makefile.build  Makefile.commands  gen-announce-email.sh  gen-dir.sh  gen-docs.sh  gen_ipl_s.sh  gen_tape_ipl_s.sh  pad.sh  release_version.sh
sys/: .gitignore  Makefile  hvf.directory
sys/cp/: cmd_display.c  cmd_logon.c  cmd_query.c  cmd_set.c  cmd_store.c  cmd_system.c  cmds.c  disassm.c  init.c  instruction.c  reset.c  splash.c
sys/doc/: PSA.txt
sys/drivers/: 3215.c  Makefile  console.c  dasd.c  device.c  vdevice.c
sys/fs/: Makefile  bdev.c
sys/include/: bdev.h  binfmt_elf.h  buddy.h  channel.h  config.h  console.h  cp.h  cpu.h  dat.h  device.h  directory.h  disassm.h  ebcdic.h  edf.h  errno.h  io.h  list.h  loader.h  mutex.h  nucleus.h  types.h  vcpu.h  vdevice.h
sys/ipl/: ipl_rdr.S  loader_asm.S  setmode.S
sys/lib/: Makefile  clock.c  digest.c  string.c  vsprintf.c
sys/mm/: buddy.c  dat.c  page.c
sys/nucleus/: ext.c  init.c  int.S  io.c  printf.c  spinlock.c
(+16 files in other folders)
